[tool.poetry]
name = "fastapi_project"
version = "0.1.0"
description = ""
authors = ["Igor Astashov <astashovivl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
passlib = "^1.7.4"
bcrypt = "^4.1.3"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
